# django_diary

./: .env.example  .gitignore  FRONTEND.md  PLAN.md  README.md  manage.py  pyproject.toml  render.yaml  requirements.txt
ai_tools/: admin.py  agent.py  apps.py  models.py  tasks.py  urls.py  views.py
ai_tools/migrations/: 0001_initial.py  0002_generatedimage_error_generatedimage_status_and_more.py
ai_tools/templates/ai_tools/: generate_image.html  image_detail.html  image_gallery.html  image_pending.html
blog/: admin.py  apps.py  models.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_location.py  0003_about_category_remove_post_content_post_body_and_more.py  0004_alter_post_body.py
blog/static/blog/css/: main.css
blog/templates/blog/: base.html  post_detail.html  post_list.html
blog/templates/blog/static/css/: blog.css
blog/templatetags/: blog_filters.py
docs/: brand.md  frontend.md  seo.md
map/: models.py  urls.py  views.py
map/migrations/: 0001_initial.py
map/templates/map/: post_list_by_location.html
templates/: base.html  robots.txt
templates/blog/: about.html  all_posts.html  detail.html  list.html
theme/static_src/: package.json  tailwind.config.js
theme/static_src/src/: styles.css
travel_diaries/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
travel_diaries/settings/: base.py  local.py  production.py
