[project]
name = "django-diary"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "logfire[django,psycopg,pydantic-ai,sqlite3,system-metrics]>=4.0.0",
    "python-dotenv>=1.1.1",
    "folium>=0.20.0",
    "dj-database-url>=2.1.0",
    "psycopg[binary,pool]>=3.0.0",
    "gunicorn>=23.0.0",
    "uvicorn>=0.34.0",
    "whitenoise[brotli]>=6.0.0",
    "django-storages[s3]>=1.14.0",
    "pillow>=11.0.0",
    "markdown>=3.7",
    "django-tailwind>=3.8.0",
    "cookiecutter>=2.7.1",
    "pydantic-ai[openai]>=1.31.0",
]
